Make sure the heading in overlays doesn't go behind close button

--- a/resources/2020/css/_box.scss
+++ b/resources/2020/css/_box.scss
@@ -67,6 +67,10 @@
       font-size: rem-calc(32px);
     }
   }
+
+  .box--overlay & {
+    padding-right: rem-calc(40px);
+  }
 }
 
 .box__text-content {
